--- a/views/product.hbs
+++ b/views/product.hbs
@@ -11,7 +11,7 @@
 </head>
     <body class="main-layout">
          <div id="content">
-    {{>nav}}
+    {{!-- {{>nav}} --}}
     <section class="text-gray-600 body-font overflow-hidden">
         <div class="container px-5 py-24 mx-auto">
             <div class="lg:w-4/5 mx-auto flex flex-wrap">
@@ -131,7 +131,7 @@
             </div>
         </div>
     </section>
-    {{>footer}}
+    {{!-- {{>footer}} --}}
     </div>
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
